--- a/app/views/layouts/print.html.erb
+++ b/app/views/layouts/print.html.erb
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
-  <body <%= body_info %>>
+  <body <%= body_info %> onload="window.print()">
     <div class="main">
       <%= yield %>
     </div>
