--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -89,7 +89,8 @@
 
 				          <div class="row m-t-25">
 				          	<div class="col">
-				          		<%= f.input :defect, required: false, label: "Defeito apresentado", as: :text, label_html: { class: "form-label" } %>
+				          		<%= f.input :defect, required: false, label: "Defeito apresentado", as: :text, label_html: { class: "form-label" }, input_html: { class: "tinymce" } %>
+				          		<%= tinymce %>
 				          	</div>
 				          </div>
 			    			</div>
@@ -115,11 +116,13 @@
 
 					      	<div class="row m-t-25">
 					      		<div class="col-12 col-md-6 col-lg-8">
-				          		<%= f.input :performed_service, required: false, label: "Serviço realizado", as: :text, label_html: { class: "form-label" } %>
+				          		<%= f.input :performed_service, required: false, label: "Serviço realizado", as: :text, label_html: { class: "form-label" }, input_html: { class: "tinymce" } %>
+				          		<%= tinymce %>
 				          	</div>     		
 
 										<div class="col-12 col-md-6 col-lg-4">
-				          		<%= f.input :obs, required: false, label: "Observações", as: :text, label_html: { class: "form-label" } %>
+				          		<%= f.input :obs, required: false, label: "Observações", as: :text, label_html: { class: "form-label" }, input_html: { rows: "5", class: "tinymce" } %>
+				          		<%= tinymce %>
 				          	</div>    
 					      	</div>
 
