--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -311,14 +311,17 @@
 							display: block;
 				    }
 
-				    p {
+				    .order-defect {
 				    	overflow: hidden;
 				    	display: -webkit-box;
 					    -webkit-line-clamp: 3;
 					    -webkit-box-orient: vertical;
 					    overflow: hidden;
-				    	font-size: .9em;
-				    	font-weight: 700;
+
+					    &, * {
+					    	font-size: .9rem;
+					    	font-weight: 700;
+					    }
 				    }
 					}
 
@@ -449,7 +452,7 @@
 			    margin-left: -50px;
 			  }
 
-				p {
+				.removal-msg, .maintenance-msg {
 					font-size: .9em;
 				}
 			}
