--- a/app/views/orders/_order_card.html.erb
+++ b/app/views/orders/_order_card.html.erb
@@ -20,7 +20,7 @@
 						<div class="order-card-body">
 							<%= content_tag :h3, "#{order.stuff.category} #{get_patrimony(order.stuff.patrimony)}" %>
 							<%= content_tag :span, order.o_type if order.o_type %>
-							<%= content_tag :p, order.defect %>
+							<%= content_tag :div, order.defect.html_safe, class: "order-defect" %>
 						</div>
 
 						<%= content_tag :footer, class: "order-card-footer" do %>
