--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -60,7 +60,7 @@
 
 		      	<%= content_tag :dl do %>
 		    			<%= content_tag :dt, "Defeito apresentado" %>
-		  				<%= content_tag :dd, @order.defect %>
+		  				<%= content_tag :dd, @order.defect.html_safe, class: "html-safe" %>
 		  			<% end %>
 		  		</section>
 
@@ -79,22 +79,22 @@
 
 		      	<%= content_tag :dl do %>
 		    			<%= content_tag :dt, "Serviço realizado" %>
-		  				<%= content_tag :dd, @order.performed_service %>
+		  				<%= content_tag :dd, @order.performed_service.html_safe, class: "html-safe" %>
 		  			<% end %>
 
 		      	<%= content_tag :dl do %>
 		    			<%= content_tag :dt, "Observações" %>
-		  				<%= content_tag :dd, @order.obs %>
+		  				<%= content_tag :dd, @order.obs.html_safe, class: "html-safe" %>
 		  			<% end %>
 		  		</section>
 
 		  		<% if !@order.start_date.nil? && @order.removal_technicians.length > 1 %>
-		    		<%= content_tag :p, class: "m-t-15 text-center" do %>
+		    		<%= content_tag :p, class: "m-t-15 text-center removal-msg" do %>
 		  				<%= "Retirado em <strong>#{@order.start_date.strftime("%d/%m/%Y")}</strong> por <strong>#{get_user(@order.removal_technicians)}</strong>".html_safe %>
 		  			<% end %>
 					<% end %>
 
-		  		<%= content_tag :p, class: "m-t-15 text-center" do %>
+		  		<%= content_tag :p, class: "m-t-15 text-center maintenance-msg" do %>
 						<%= "Manutenção feita por <strong>#{get_user(@order.maintenance_technicians)}</strong>".html_safe if @order.maintenance_technicians.length > 1 %>
 						<%= " e entregue em <strong>#{@order.end_date.strftime("%d/%m/%Y")}</strong>".html_safe if !@order.end_date.nil? %>
 					<% end if @order.maintenance_technicians.length > 1 && !@order.end_date.nil? %>
