--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
   </head>
 
   <body <%= body_info %>>
+    <%= render 'shared/loading' %>
+
     <div class="main">
       <span class="menu-icon material-icons md-20">menu</span>
 
