--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -94,6 +94,7 @@
 	text-decoration: none;
 	background-color: transparent;
 	font-size: 1em;
+	font-weight: bold;
 
 	&:hover {
 		cursor: pointer;
@@ -168,6 +169,32 @@
 .logo-subtitle {
 	font-size: 1em;
 	color: $primary-color;
+}
+
+.loading {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 999;
+	background-color: $alt-color;
+
+	.loading-content {
+		text-align: center;
+	}
+
+	.logo-dti, .logo-subtitle {
+		color: $dark-blue;
+		display: block;
+	}
+
+	.logo-dti {
+		margin-bottom: 15px;
+	}
 }
 
 section {
