--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -18,6 +18,8 @@
   </head>
 
   <body <%= body_info %>>
+    <%= render 'shared/loading' %>
+    
     <div class="main">
       <%= yield %>
     </div>
