added current password confirmation and update to orders when an user is deleted

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -2,6 +2,8 @@
 	<%= render "shared/main_menu" %>
 	
 	<div class="main-container">
+		<%= flash_message %>
+		
 		<div class="row">
 			<div class="col">
 				<header class="container-header">
