--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -2,6 +2,8 @@
   <%= render "shared/main_menu" %>
 
   <div class="main-container">
+    <%= flash_message %>
+
     <div class="row">
       <div class="col">
         <header class="container-header">
@@ -16,9 +18,22 @@
     </div>
 
     <section class="container-body">
-      <% unless current_user == @user %><h3 class="m-b-25">Usuário: <%= content_tag :span, @user.name %></h3><% end %>
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          <% unless current_user == @user %><h3 class="username m-b-25">Usuário: <%= content_tag :span, @user.user_level == 1 ? @user.school.name : @user.name %></h3><% end %>
+        </div>
+      </div>
 
       <%= simple_form_for @user, url: edit_user_password_path, html: { class: "form" } do |f| %>
+        <div class="row">
+          <div class="col-12 col-sm-6">
+            <div class="input">
+              <%= content_tag :label, "Senha atual", for: "current_password", class: "form-label" %>
+              <%= password_field_tag :current_password, params[:current_password], id: "current_password", placeholder: "**********" %>
+            </div>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-12 col-sm-6">
             <%= f.input :password, label: "Senha", label_html: { class: "form-label" }, hint: ("mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length), input_html: { placeholder: "**********"} %>
