--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -18,6 +18,17 @@
 			}
 		}
 	}
+
+	.username {
+		background-color: $dark-blue;
+		padding: 15px;
+		border-radius: 5px;
+
+		&, span {
+			font-style: italic;
+			color: $primary-color;
+		}
+	}
 }
 
 
