--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,20 +24,18 @@
             <%= f.input :user_level, as: :hidden, input_html: { value: 0 } %>
 
             <div class="row">
-              <div class="col-12">
+              <div class="col-12 col-md-6">
                 <%= f.input :name, label: "Nome completo", label_html: { class: "form-label" }, input_html: { autofocus: true, placeholder: "Fulaninho de Tal"} %>
               </div>
-            </div>
 
-            <div class="row">
-              <div class="col-12">
+              <div class="col-12 col-md-6">
                 <%= f.input :email, label: "E-mail", label_html: { class: "form-label" }, input_html: { placeholder: "usuario@email.com"} %>
               </div>
             </div>
 
             <div class="row">
-              <div class="col-12">
-                <%= f.input :is_technician, required: false, label: "Este usuário é técnico?", as: :radio_buttons, collection: ['Sim', 'Não'], wrapper_html: { class: "boolean m-t-0" } %>
+              <div class="col-12 col-md-3">
+                <%= f.input :is_technician, label: "Este usuário é técnico?", collection: ["Sim", "Não"], include_blank: false, label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
               </div>
             </div>
 
