--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -11,7 +11,7 @@
 
 					<div class="actions text-center">
 		        <%= link_to edit_order_path(@order), class: "btn-info icon" do %><span class="material-icons md-16 md-light">edit</span>Editar OS<% end %>
-		        <%= link_to :back, class: "btn-cancel" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
+		        <%= link_to :back, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
 		      </div>
 				</header>
 			</div>
