--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -14,6 +14,9 @@
       left: 15px;
       top: 15px;
       cursor: pointer;
+      background-color: $alt-color;
+      padding: 10px;
+      border-radius: 50%;
     }
 
     .main-sidebar {
@@ -110,16 +113,24 @@
         width: 100%;
       }
     }
+
+    .btn.icon {
+      padding: 0;
+      text-indent: -9999px;
+      min-width: auto;
+
+      span {
+        @include prefix(transform, translateX(0));
+        border-radius: 5px;
+        text-indent: initial;
+      }
+    }
   }
 }
 
 @media only screen and (max-width: 575px){
   html, body {
     font-size: 10px;
-
-    .actions {
-      flex-direction: column;
-    }
 
     .main-panel .main-container {
       padding: 15px;
@@ -139,12 +150,36 @@
         }
       }
     }
+
+    #home, #orders, #schools, #users {
+      .main-panel .main-container .container-body section h3 {
+        margin-left: -15px !important;
+      }
+    }
+
+    #registrations, #sessions, #passwords {
+      &.new, &.create {
+        .main {
+          height: 100%;
+          min-height: auto;
+          padding: 0;
+        }
+      }
+    }
+
+    .login-panel {
+      height: 100%;
+    }
+
+    .flash {
+      margin-top: 50px;
+    }
   }
 }
 
 //fix for iPhone
 @media screen and (max-device-width: 480px){
-  body{
+  body {
     -webkit-text-size-adjust: none;
   }
 }
