--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -133,12 +133,13 @@
 			      				<h3 class="uppercase highlight">Técnico responsável</h3>
 
 			      				<div class="col-12 col-sm-6 col-lg-4">
-				          		<%= f.input :removal_technicians, required: false, label: "Retirada", collection: @technicians, include_blank: "--------------------", input_html: { multiple: true, title: "Pressione CTRL para marcar/desmarcar" }, label_html: { class: "form-label" } %>
+				          		<%= f.input :removal_technicians, required: false, label: "Retirada", collection: @technicians, include_blank: false, input_html: { multiple: true, "data-placeholder" => "Quem retirou o equipamento?", title: "Pressione CTRL para marcar/desmarcar", class: "chosen-select" }, label_html: { class: "form-label" } %>
 										</div>   		
 
 										<div class="col-12 col-sm-6 col-lg-4">
-											<%= f.input :maintenance_technicians, required: false, label: "Manutenção", collection: @technicians, include_blank: "--------------------", input_html: { multiple: true, title: "Pressione CTRL para marcar/desmarcar" }, label_html: { class: "form-label" } %>
+											<%= f.input :maintenance_technicians, required: false, label: "Manutenção", collection: @technicians, include_blank: false, input_html: { multiple: true, "data-placeholder" => "Quem fez a manutenção?", title: "Pressione CTRL para marcar/desmarcar", class: "chosen-select" }, label_html: { class: "form-label" } %>
 				          	</div>   
+
 					      	</div>
 
 
