--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -101,7 +101,7 @@
 
 			<div class="row">
 				<div class="col-12 text-center">
-					<%= link_to orders_path, class: "btn-cancel icon" do %>Limpar filtros<% end %>
+					<%= link_to orders_path, class: "btn-cancel" do %>Limpar filtros<% end %>
 				</div>
 			</div>
 
