--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -28,7 +28,7 @@
 
 			      	<div class="row">
 			      		<%= content_tag :div, "", class: "col-12 col-sm-6 col-md-4 col-lg-3" do %>
-		      				<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+		      				<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, input_html: { class: "chosen-select" } %>
 		    				<% end if is_admin? %>
 
 			      		<div class="col-12 col-sm-6 col-md-4 col-lg-3">
