--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -54,7 +54,7 @@
 
 			<div class="row">
 				<div class="col-12 text-center">
-					<%= link_to schools_path, class: "btn-cancel icon" do %>Limpar filtros<% end %>
+					<%= link_to schools_path, class: "btn-cancel" do %>Limpar filtros<% end %>
 				</div>
 			</div>
 
