--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -52,7 +52,7 @@
 
 			<div class="row">
 				<div class="col-12 text-center">
-					<%= link_to stuffs_path, class: "btn-cancel icon" do %>Limpar filtros<% end %>
+					<%= link_to stuffs_path, class: "btn-cancel" do %>Limpar filtros<% end %>
 				</div>
 			</div>
 
