--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,7 +40,7 @@
 
 			<div class="row">
 				<div class="col-12 text-center">
-					<%= link_to users_path, class: "btn-cancel icon" do %>Limpar filtros<% end %>
+					<%= link_to users_path, class: "btn-cancel" do %>Limpar filtros<% end %>
 				</div>
 			</div>
 
