--- a/app/assets/stylesheets/core/_chosen.scss
+++ b/app/assets/stylesheets/core/_chosen.scss
@@ -1,6 +1,7 @@
 .chosen-container, .chosen-container-multi {
   font-size: 1em;
   font-family: $font;
+  min-width: 240px;
 
   .chosen-single, &.chosen-container-active.chosen-with-drop .chosen-single, .chosen-choices {
     padding: 10px 30px 10px 15px;
