--- a/app/assets/stylesheets/modules/_stuffs.scss
+++ b/app/assets/stylesheets/modules/_stuffs.scss
@@ -1,4 +1,4 @@
-#schools {
+#stuffs {
   .main-panel .main-container {
     .container-body {
       section {
@@ -27,12 +27,6 @@
         div {
           color: $secondary-color;
         }
-      }
-    }
-
-    .card {
-      .card-body {
-        padding: 25px;
       }
     }
   }
