--- a/app/views/orders/print_order.html.erb
+++ b/app/views/orders/print_order.html.erb
@@ -1,9 +1,9 @@
 <div class="print-area">
   <div class="content">
     <header>
-      <span class="logo-dti">DTI</span>
+      <%= image_tag "logo-dcpeoti.png", class: 'logo-dcpeoti' %>
       <h1 class="main-title">Ordem de serviço <%= @order.id %><span><%= @order.o_type if @order.o_type %></span></h1>
-      <span class="logo-dti">DTI</span>
+      <%= image_tag "logo-dcpeoti.png", class: 'logo-dcpeoti' %>
     </header>
 
     <div class="container">
