--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -118,6 +118,10 @@
 				  	border-left: solid 5px $alert;
 				  }
 
+				  &.aguardando-doacao {
+				  	border-left: solid 5px $crimson;
+				  }
+
 				  &.concluido {
 				  	border-left: solid 5px $info;
 				  }
@@ -128,6 +132,7 @@
 
 				  .order-card-header {
 				  	flex-direction: column;
+				  	min-width: 120px;
 
 				  	.right-content {
 				  		padding-top: 15px;
@@ -191,6 +196,10 @@
 			  	color: $alert;
 			  }
 
+			  &.aguardando-doacao h4 span {
+			  	color: $crimson;
+			  }
+
 			  &.concluido h4 span {
 			  	color: $info;
 			  }
@@ -248,6 +257,10 @@
 
 				  &.aguardando-pecas {
 				  	border-top: solid 10px $alert;
+				  }
+
+				  &.aguardando-doacao {
+				  	border-top: solid 10px $crimson;
 				  }
 
 				  &.concluido {
@@ -308,19 +321,6 @@
 							color: rgba(0, 0, 0, 0.5);
 							margin-bottom: 15px;
 							display: block;
-				    }
-
-				    .order-defect {
-				    	overflow: hidden;
-				    	display: -webkit-box;
-					    -webkit-line-clamp: 3;
-					    -webkit-box-orient: vertical;
-					    overflow: hidden;
-
-					    &, * {
-					    	font-size: .9rem;
-					    	font-weight: 700;
-					    }
 				    }
 					}
 
@@ -442,7 +442,7 @@
 			    color: $primary-color;
 			    display: inline-block;
 			    border-radius: 0 5px 5px 0;
-			    margin-left: -50px;
+			    margin-left: -30px;
 			  }
 
 				.removal-msg, .maintenance-msg {
@@ -567,6 +567,11 @@
 			max-width: 680px;
 			height: 100%;
 			margin: 0 auto;
+
+			.logo-dcpeoti {
+				width: 10em;
+				filter: none;
+			}
 		}
 
 		.main {
@@ -579,7 +584,7 @@
 			header {
 				display: flex;
 				justify-content: space-between;
-				align-items: end;
+				align-items: center;
 				gap: 25px;
 
 				span {
