--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -1,8 +1,6 @@
 <aside class="menu main-sidebar">
 	<header class="sidebar-header">
-		<%= link_to "DTI", home_path, class: 'logo-dti' %>
-
-		<h3 class="logo-subtitle">SISTEMA DE <br>GERENCIAMENTO DE <br>CHAMADOS TÉCNICOS</h3>
+		<%= image_tag "logo-dcpeoti.png", class: 'logo-dcpeoti' %>
 	</header>
 	
 	<nav class="sidebar-nav">
