added character validations

--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="col-12 col-lg-2">
-                  <%= s.input :phone, label: "Telefone", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: (00) 91234-5678"} %>
+                  <%= s.input :phone, label: "Telefone", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: (00) 91234-5678", maxlength: 30} %>
                 </div>
               </div>
 
