--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,7 @@
 											<% end %>
 
 											<div class="table-col table-col-<%= is_school? ? "50" : "35" %>" data-label="Defeito apresentado">
-												<div class="order-defect">
+												<div class="order-defect limited-text">
 													<%= o.defect.to_s.html_safe %>	
 												</div>
 											</div>
