--- a/app/views/orders/print_order.html.erb
+++ b/app/views/orders/print_order.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <header>
       <%= image_tag "logo-dcpeoti.png", class: 'logo-dcpeoti' %>
-      <h1 class="main-title">Ordem de serviço <%= @order.id %><span><%= @order.o_type if @order.o_type %></span></h1>
+      <h1 class="main-title">Ordem de serviço #<%= @order.id.to_s.rjust(3, '0') %><span><%= @order.o_type if @order.o_type %></span></h1>
       <%= image_tag "logo-dcpeoti.png", class: 'logo-dcpeoti' %>
     </header>
 
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-12 block-col">
             <h3>Defeito/problema apresentado</h3>
-            <div class="html-safe"><%= @order.defect.to_s.html_safe %></div>
+            <div class="limited-text html-safe"><%= @order.defect.to_s.html_safe %></div>
           </div>
         </div>
 
