--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -16,7 +16,7 @@
 
 		.hidden-scrollbar {
 			overflow: hidden;
-    	height: 75vh;
+    	height: 80vh;
     	position: relative;
 
     	&.list {
@@ -132,7 +132,7 @@
 
 				  .order-card-header {
 				  	flex-direction: column;
-				  	min-width: 120px;
+				  	min-width: 10em;
 
 				  	.right-content {
 				  		padding-top: 15px;
