--- a/app/views/stuffs/edit.html.erb
+++ b/app/views/stuffs/edit.html.erb
@@ -46,9 +46,11 @@
 		      	</div>
 
 		        <div class="row">
-							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
-				      	<%= f.input :defaulted, required: false, label: "Equipamento está padronizado?", collection: ["Sim", "Não"], include_blank: false, label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
-							</div>	      		
+		        	<% if @stuff.category == 'PC/Notebook' %>
+								<div class="col-12 col-lg-4 col-md-5 col-sm-6">
+					      	<%= f.input :defaulted, required: false, label: "Equipamento está padronizado?", collection: ["Sim", "Não"], include_blank: false, label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
+								</div>	
+							<% end %>     		
 		      	</div>
 			    <% end %>
 				</section>
