--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -93,6 +93,7 @@
 					flex-direction: row;
 					border-top: none !important;
 					width: 100%;
+					min-height: auto;
 
 					&.focused {
 						background-color: $primary-color;
@@ -231,6 +232,7 @@
 				  border-radius: 5px;
 				  display: flex;
 				  width: 300px;
+				  min-height: 300px;
 				  flex-direction: column;
 				  position: relative;
 				  background-color: white;
@@ -366,7 +368,7 @@
 									height: 2px;
 									position: absolute;
 									top: 20px;
-									right: 10px;
+									right: 17.5px;
 									background-color: #aaa;
 									border: none;
 								}
