--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -274,7 +274,7 @@
 				  }
 
 					&:hover {
-					  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+					  @include prefix(box-shadow, (0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)));
 					}
 
 					.order-card-header {
