--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -71,7 +71,7 @@
 		  			<div class="row">
 							<div class="col-12">
 								<div class="card">
-									<% unless @school.orders.nil? || @school.orders.blank? %>
+									<% unless @orders.nil? || @orders.blank? %>
 										<div class="card-body">
 											<ul class="responsive-table">
 												<li class="table-header">
@@ -84,7 +84,7 @@
 													<div class="table-col table-col-10"><div class="options">Opções</div></div>
 												</li>
 
-												<% @school.orders.order("created_at DESC").each do |o| %>
+												<% @orders.order("created_at DESC").each do |o| %>
 													<li class="table-row">
 														<div class="table-col table-col-5" data-label="#"><strong><%= o.id.to_s.rjust(3, '0') %></strong></div>
 														<div class="table-col table-col-10" data-label="Solicitante"><%= o.requester %></div>
@@ -107,9 +107,11 @@
 													</li>
 												<% end %>
 											</ul>
+
+											<%= paginate @orders, param_name: :orders_page %>
 										</div>
 									<% else %>
-										<h3 class="text-center m-t-25 p-b-50"><i>Nenhuma OS registrada para esta unidade.</i></h3>
+										<h4 class="text-center m-t-25 p-b-50"><i>Nenhuma OS registrada para esta unidade.</i></h4>
 									<% end %>
 								</div>
 							</div>
@@ -122,7 +124,7 @@
 		  			<div class="row">
 							<div class="col-12">
 								<div class="card">
-									<% unless @school.stuffs.nil? || @school.stuffs.blank? %>
+									<% unless @stuffs.nil? || @stuffs.blank? %>
 										<div class="card-body">
 											<ul class="responsive-table">
 												<li class="table-header">
@@ -132,7 +134,7 @@
 													<div class="table-col table-col-10"><div class="options">Opções</div></div>
 												</li>
 
-												<% @school.stuffs.order("category ASC").each do |s| %>
+												<% @stuffs.order("category ASC").each do |s| %>
 													<li class="table-row">
 														<div class="table-col table-col-15" data-label="Patrimônio"><%= s.patrimony.presence || "S/P" %></div>
 														<div class="table-col table-col-40" data-label="Categoria">
@@ -151,9 +153,11 @@
 													</li>
 												<% end %>
 											</ul>
+
+											<%= paginate @stuffs, param_name: :stuffs_page %>
 										</div>
 									<% else %>
-										<h3 class="text-center m-t-25 p-b-50"><i>Nenhum equipamento registrado para esta unidade.</i></h3>
+										<h4 class="text-center m-t-25 p-b-50"><i>Nenhum equipamento registrado para esta unidade.</i></h4>
 									<% end %>
 								</div>
 							</div>
