--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,6 +40,59 @@
 		  				<%= content_tag :dd, @user.email %>
 		  			<% end %>
 		  		</section>
+
+		  		<section>
+		  			<h3 class="m-b-25">Histórico</h3>
+
+		  			<div class="row">
+							<div class="col-12">
+								<div class="card">
+									<% unless @orders.nil? || @orders.blank? %>
+										<div class="card-body">
+											<ul class="responsive-table">
+												<li class="table-header">
+													<div class="table-col table-col-5">#</div>
+													<div class="table-col table-col-10">Solicitante</div>
+													<div class="table-col table-col-10">Status</div>
+													<div class="table-col table-col-10">Tipo</div>
+													<div class="table-col table-col-40">Defeito apresentado</div>
+													<div class="table-col table-col-15">Atualizada em</div>
+													<div class="table-col table-col-10"><div class="options">Opções</div></div>
+												</li>
+
+												<% @orders.order("created_at DESC").each do |o| %>
+													<li class="table-row">
+														<div class="table-col table-col-5" data-label="#"><strong><%= o.id.to_s.rjust(3, '0') %></strong></div>
+														<div class="table-col table-col-10" data-label="Solicitante"><%= o.requester %></div>
+														<div class="table-col table-col-10" data-label="Status" data-status="<%= get_status(o.status) %>"><%= o.status %></div>
+														<div class="table-col table-col-10" data-label="Tipo"><%= o.o_type || " - " %></div>
+														<div class="table-col table-col-40" data-label="Defeito apresentado">
+															<div class="order-defect limited-text">
+																<%= o.defect.to_s.html_safe %>
+															</div>
+														</div>
+														<div class="table-col table-col-15" data-label="Atualizada em">
+															<%= "#{o.updated_at.strftime("%d/%m/%Y")} por #{order_creator(o.updated_by)}" %><br />
+															<%= o.updated_at.strftime("%H:%M") %>
+														</div>
+														<div class="table-col table-col-10" data-label="Opções">
+															<div class="options">
+											          <%= link_to order_path(o), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-icons md-20">visibility</span><% end %>
+															</div>
+														</div>
+													</li>
+												<% end %>
+											</ul>
+
+											<%= paginate @orders %>
+										</div>
+									<% else %>
+										<h4 class="text-center m-t-25 p-b-50"><i>Nenhuma OS atendida por este usuário.</i></h4>
+									<% end %>
+								</div>
+							</div>
+						</div>
+		  		</section>
 				</section>
 			</div>
 		</div>
